--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <input type="text" class="search-bar" placeholder="search here" />
         <button>&#128269;</button>
       </div>
-      <div class="weather">
-        <h2 class="city">weather in india</h2>
-        <h1 div class="temp">51°C</div>
+      <div class="weather loading">
+        <h2 class="city"></h2>
+        <h1 div class="temp"></div>
         <img src="" alt="" class="icon" />
-        <div class="description">cloudy</div>
-        <div class="humidity">Humidity:60%</div>
-        <div class="wind">wind speed :6.2km/hr</div>
+        <div class="description"></div>
+        <div class="humidity"></div>
+        <div class="wind"> </div>
       </div>
     </div>
   </body>
